<resources>
    <string name="app_name">kulimax</string>
    <string name="button1_name">Diagnose</string>
    <string name="mushroom_plant">Mushroom Plant</string>
    <string name="farm_calculator">Farm Calculator</string>
    <string name="calculator">
        Enter your farm land size:</string>
    <string name="how_to_start">1) Find some space</string>
    <string name="how_to_start2">The size of the space you need depends on lots of factors like how many mushrooms you are aiming to grow.Example:</string>

    <string name="how_to_start3">2) Design your space</string>
    <string name="how_to_start33">There are so many different ways of designing your setup depending on the space you have and your budget, but I will show you some examples to help give you the general idea.</string>

    <string name="how_to_start4">3) Start growing</string>
    <string name="how_to_start44">Deposit money then farm equipments(number of seeds, cotton size) are delivered to you.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>

