<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Main5Activity">


    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="#ff0"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_start"
                android:textColor="@color/red"
                android:padding="2dip"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_start2"
                android:textColor="#fff"
                android:layout_below="@+id/tv1"
                android:layout_marginLeft="3dp"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/button1_name"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/room" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>




    <!-- A CardView2 that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_below="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="#ff0"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_start3"
                android:textColor="@color/red"
                android:padding="2dip"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv22"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_start33"
                android:textColor="#fff"
                android:layout_below="@+id/tv11"
                android:layout_marginLeft="3dp"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/imageView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv22"
                android:adjustViewBounds="true"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/button1_name"
                app:srcCompat="@drawable/space" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>



    <!-- A CardView3 that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_below="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="#ff0"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_start4"
                android:textColor="@color/red"
                android:padding="2dip"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv55"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_start44"
                android:textColor="#fff"
                android:layout_below="@+id/tv44"
                android:layout_marginLeft="3dp"
                android:textSize="15sp"/>

            <ImageView
                android:id="@+id/imageView55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv55"
                android:adjustViewBounds="true"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/button1_name"
                app:srcCompat="@drawable/oyest" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
</ScrollView>